--- a/frontend/kiosk.html
+++ b/frontend/kiosk.html
@@ -58,7 +58,9 @@
             <div class="Stats" id="XP">
                 <div id="imageXP"></div>
             </div>
-            <div class="Stats" id="runout"></div>
+            <div class="Stats" id="runout">
+                <div id="imagerunout"></div>
+            </div>
             <div id="lvl"></div>
         </div>
         <div id="AllStatsInfo">
