--- a/frontend/race.html
+++ b/frontend/race.html
@@ -7,6 +7,11 @@
     <link rel="icon" href="assets/icon.png" type="image/png">
 
     <title>Race</title>
+    <style>
+        #screen {
+            background-color: #D1D0CE;
+        }
+    </style>
 </head>
 <body>
     <div class="body">
@@ -18,9 +23,15 @@
         </div>
         <div id="ramka">
         <div id="screen">
-            <div id="babolot"></div>
-            <div id="racehole"></div>
-            <div id="runOut"></div>
+            <div id="babolot">
+                <img src="./assets/background/grandmalogo.png" class="imageLogo">
+            </div>
+            <div id="racehole">
+                <img src="./assets/background/grandmalogo.png" class="imageLogo">
+            </div>
+            <div id="runOut">
+                <img src="./assets/background/grandmalogo.png" class="imageLogo">
+            </div>
         </div>
         </div>
         <div id="settings">
