--- a/frontend/race.html
+++ b/frontend/race.html
@@ -9,7 +9,7 @@
     <title>Race</title>
     <style>
         #screen {
-            background-color: #D1D0CE;
+            background-color: #E5E4E2;
         }
     </style>
 </head>
