--- a/frontend/login.html
+++ b/frontend/login.html
@@ -5,12 +5,16 @@
     <title>Log in</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" href="assets/icon.png" type="image/png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="body">
         <div class="container">
             <div class="gif">
-                <div class="name">Babolot</div>
+                <div class="name">
+                </div>
                <img src="./assets/login/car_8.gif" alt="car">
             </div>
             <form method="POST">
