--- a/frontend/nauka.html
+++ b/frontend/nauka.html
@@ -11,6 +11,9 @@
             background-image: url("./assets/background/background4.png");
         }
     </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="body">
