--- a/frontend/register.html
+++ b/frontend/register.html
@@ -6,7 +6,9 @@
     <title> Register </title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <link rel="icon" href="assets/icon.png" type="image/png">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="body">
