--- a/frontend/race.html
+++ b/frontend/race.html
@@ -10,6 +10,7 @@
     <style>
         #screen {
             background-color: #E5E4E2;
+            background-image: url("./assets/background/background1.png");
         }
     </style>
 </head>
@@ -24,13 +25,13 @@
         <div id="ramka">
         <div id="screen">
             <div id="babolot">
-                <img src="./assets/background/grandmalogo.png" class="imageLogo">
+                <img src="./assets/background/grannylogo.png" class="imageLogo">
             </div>
             <div id="racehole">
-                <img src="./assets/background/grandmalogo.png" class="imageLogo">
+                <img src="./assets/background/raceholelogo.png" class="imageLogo">
             </div>
             <div id="runOut">
-                <img src="./assets/background/grandmalogo.png" class="imageLogo">
+                <img src="./assets/background/runoutlogo.png" class="imageLogo">
             </div>
         </div>
         </div>
