--- a/frontend/racehole.html
+++ b/frontend/racehole.html
@@ -292,7 +292,7 @@ screenDiv.appendChild(imageElement);
 			
 			if (isEnd==145)
 			{
-			alert("11");
+			            window.location.href = '/city';
 			}
 			
 			
